[project]
name = "agent-using-handoff"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hussainezzi", email = "hussainezzi03@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.5.5",
    "openai-agents>=0.0.10",
    "python-dotenv>=1.1.0",
]

[project.scripts]
agent-using-handoff = "agent_using_handoff:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
